# vfxgal

./: CMakeLists.txt  INSTALL.txt  README.md
cmake/: FindHoudini.cmake  FindILMBase.cmake  FindQHull.cmake  FindTbb.cmake
contrib/boost_process/boost/process/: operations.hpp
contrib/pystring/: CMakeLists.txt  pystring.cpp  pystring.h
core/src/: ClippedPoly.hpp  ClippingContext.hpp  EdgeIntersection.hpp  Line2.hpp  LineSegment.hpp  MeshConnectivity.hpp  Projection_2D.hpp  VoronoiCell.hpp  edge.hpp  enums.hpp  exceptions.h  line_segment_2D.hpp  mesh.hpp  plane.hpp  points.hpp  poly.hpp  poly2D.hpp  poly3D.hpp  simple_mesh.hpp  util.hpp
core/src/adaptors/: houdini.hpp  mesh.hpp  mesh_points.hpp  octree.hpp  points.hpp  points_indexer.hpp  points_replacer.hpp
core/src/algorithm/: addMeshEdges.hpp  addMeshPoints.hpp  addPolyEdges.hpp  breakHoles2D.hpp  cleanMesh.hpp  clipMesh3D.hpp  clipPoly2D.hpp  clipPoly3D.hpp  remapMesh.hpp  voronoiFractureMesh3D.hpp
core/src/detail/: qhull_voronoi.hpp
core/src/octree/: cell.hpp  cube.hpp  exceptions.hpp  octree.hpp  pointSet.hpp  polygonSet.hpp
core/src/util/: no_tbb.hpp
core/test/: CMakeLists.txt  test_main.cpp
core/vfxgal/: CMakeLists.txt  ClippedPoly.hpp  ClippingContext.hpp  EdgeIntersection.hpp  Line2.hpp  LineSegment.hpp  Makefile  MeshConnectivity.hpp  Projection_2D.hpp  VoronoiCell.hpp  defns.h  edge.hpp  enums.hpp  exceptions.h  line3.hpp  line_segment_2D.hpp  mesh.hpp  plane.hpp  points.hpp  poly.hpp  poly2D.hpp  poly3D.hpp  simple_mesh.hpp  util.hpp
core/vfxgal/adaptors/: houdini.hpp  mesh.hpp  mesh_points.hpp  octree.hpp  points.hpp  points_indexer.hpp  points_replacer.hpp
core/vfxgal/algorithm/: addMeshEdges.hpp  addMeshPoints.hpp  addPolyEdges.hpp  breakHoles2D.hpp  cleanMesh.hpp  clipMesh3D.hpp  clipPoly2D.hpp  clipPoly3D.hpp  remapMesh.hpp  voronoiFractureMesh3D.hpp
core/vfxgal/detail/: qhull_voronoi.hpp
core/vfxgal/octree/: cell.hpp  cube.hpp  exceptions.hpp  octree.hpp  pointSet.hpp  polygonSet.hpp
core/vfxgal/util/: no_tbb.hpp
houdini/: CMakeLists.txt
houdini/hip/: CMakeLists.txt  add_edges.hip  clean_mesh.hip  hull_clip.hip  plane_clip.hip  voronoi_fracture.hip
houdini/sops/hip/: clean_mesh.hip  hull_clip.hip  voronoi_fracture.hip
houdini/sops/src/: SOP_AddEdges.cpp  SOP_AddEdges.h  SOP_HullClip.cpp  SOP_PlaneClip.cpp  SOP_PlaneClip.h  SOP_VoronoiFracture.cpp
houdini/sops/src/util/: simple_mesh.cpp  simple_mesh.h
houdini/src/: CMakeLists.txt  SOP_AddEdges.cpp  SOP_AddEdges.h  SOP_CleanMesh.cpp  SOP_CleanMesh.h  SOP_HullClip.cpp  SOP_HullClip.h  SOP_PlaneClip.cpp  SOP_PlaneClip.h  SOP_VoronoiFracture.cpp  SOP_VoronoiFracture.h
houdini/src/util/: GeoAttributeCopier.cpp  GeoAttributeCopier.h  OP_Params.cpp  OP_Params.h  ScopedCook.cpp  ScopedCook.h  simple_mesh.cpp  simple_mesh.h  util.h
houdini/util/src/: GeoAttributeCopier.h  GeoUtils.cpp  GeoUtils.h  OP_Params.cpp  OP_Params.h  ScopedCook.cpp  ScopedCook.h  util.h
